--- a/static/index.html
+++ b/static/index.html
@@ -7,16 +7,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Othello (Reversi)</h1>
-    <div id="scoreboard">
-        <span id="black-count">Preto: 0</span>
-        <span id="white-count">Branco: 0</span>
+    <div class="container">
+        <h1>Othello (Reversi)</h1>
+        <div id="scoreboard">
+            <span id="black-count">Preto: 0</span>
+            <span id="white-count">Branco: 0</span>
+        </div>
+        <div id="player-color">Aguardando cor...</div>
+        <div id="player-turn">Vez do jogador: Preto</div>
+        <div class="game-container">
+            <div id="game-board"></div>
+            <div id="chat">
+                <div id="chat-messages"></div>
+                <input type="text" id="chat-input" placeholder="Digite uma mensagem...">
+                <button id="chat-send">Enviar</button>
+            </div>
+        </div>
+        <button id="resign-button">Desistir</button>
+        <div id="message"></div>
     </div>
-    <div id="player-color">Aguardando cor...</div>
-    <div id="player-turn">Vez do jogador: Preto</div>
-    <div id="game-board"></div>
-    <button id="resign-button">Desistir</button>
-    <div id="message"></div>
     <script src="script.js"></script>
 </body>
 </html>
