add classes to change turn

--- a/static/index.html
+++ b/static/index.html
@@ -29,7 +29,11 @@
 
                 <div id="player-color">Aguardando cor...</div>
 
-                <div id="player-turn">Vez do jogador: Preto</div>
+                <div id="player-turn">
+                    Vez do jogador: 
+                    <span class="player_black_turn">Preto</span>
+                    <span class="player_white_turn">Branco</span>
+                </div>
                 
                 <div id="message"></div>
                 
